--- a/portfolio.html
+++ b/portfolio.html
@@ -20,40 +20,43 @@
   </head>
   <body>
     <header>
+      <header class="page-header">
       <!-- Logo -->
-
-      <nav>
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-title">Studio</span></a
-        >
-        <!-- Menu navigation -->
-        <ul class="site-nav list">
-          <li><a class="link but" href="./index.html">Studio</a></li>
-          <li><a class="link but" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="link but" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <!-- Contacts -->
-      <address class="add">
-        <ul class="list">
-          <li>
-            <a class="link contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link contact" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-title">Studio</span></a
+          >
+          <!-- Menu navigation -->
+          <ul class="site-nav list">
+            <li><a class="link but" href="./index.html">Studio</a></li>
+            <li><a class="link but" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="link but" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <!-- Contacts -->
+        <address class="add">
+          <ul class="list">
+            <li>
+              <a class="link contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link contact" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Our works -->
-      <section class="section">
+      <section class="section portfolio">
+        <div class="container">
         <h1 hidden class="work section-title">Our works</h1>
-        <ul class="list">
+        <ul class="list btn">
           <li><button type="button" class="link work-button">All</button></li>
           <li>
             <button type="button" class="link work-button">Web Site</button>
@@ -176,17 +179,20 @@
             >
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="./index.html"
-        >Web
-        <span class="logo-cloud">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+       <div class="container">
+        <a class="logo link" href="./index.html"
+          >Web
+          <span class="logo-cloud">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
