Модуль3 вебінар 6 FlexBox Index.html
Розташував блоки за допомогою флексів

--- a/index.html
+++ b/index.html
@@ -20,27 +20,31 @@
   <body>
     <header class="page-header">
       <!-- Logo -->
-      <div class="container">
-        <nav>
+      <div class="container main-nav">
+        <nav class="main-nav">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-title">Studio</span></a
           >
           <!-- Menu navigation -->
           <ul class="site-nav list">
-            <li><a class="link but" href="./index.html">Studio</a></li>
-            <li><a class="link but" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="link but" href="">Contacts</a></li>
+            <li class="item">
+              <a class="link but" href="./index.html">Studio</a>
+            </li>
+            <li class="item">
+              <a class="link but" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="item"><a class="link but" href="">Contacts</a></li>
           </ul>
         </nav>
         <!-- Contacts -->
         <address class="add">
-          <ul class="list">
-            <li>
+          <ul class="list contact-list">
+            <li class="item">
               <a class="link contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="item">
               <a class="link contact" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -60,29 +64,29 @@
       <section class="section qua">
         <div class="container">
           <h2 hidden class="section-title">Our qualities</h2>
-          <ul class="list">
-            <li>
+          <ul class="list qua">
+            <li class="item">
               <h3 class="section-qualities">Strategy</h3>
               <p class="section-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="section-qualities">Punctuality</h3>
               <p class="section-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="section-qualities">Diligence</h3>
               <p class="section-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="section-qualities">Technologies</h3>
               <p class="section-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -97,22 +101,22 @@
       <section class="section doing">
         <div class="container">
           <h2 class="section-title transform">What are we doing</h2>
-          <ul class="list">
-            <li>
+          <ul class="list doing">
+            <li class="item">
               <img
                 src="./images/work1.jpg"
                 alt="program for use on a computer"
                 width="360"
               />
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/work2.jpg"
                 alt="application for use on the phone"
                 width="360"
               />
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/work3.jpg"
                 alt="program for use on a laptop"
@@ -126,26 +130,34 @@
       <section class="section team">
         <div class="container">
           <h2 class="section-title transform">Our Team</h2>
-          <ul class="list">
-            <li class="list-team">
+          <ul class="list team">
+            <li class="item">
               <img src="./images/employees1.jpg" alt="employees" width="264" />
-              <h3 class="section-name">Mark Guerrero</h3>
-              <p class="section-text">Product Designer</p>
+              <div class="team-container">
+                <h3 class="section-name">Mark Guerrero</h3>
+                <p class="section-text">Product Designer</p>
+              </div>
             </li>
-            <li class="list-team">
+            <li class="item">
               <img src="./images/employees2.jpg" alt="employees" width="264" />
-              <h3 class="section-name">Tom Ford</h3>
-              <p class="section-text">Frontend Developer</p>
+              <div class="team-container">
+                <h3 class="section-name">Tom Ford</h3>
+                <p class="section-text">Frontend Developer</p>
+              </div>
             </li>
-            <li class="list-team">
+            <li class="item">
               <img src="./images/employees3.jpg" alt="employees" width="264" />
-              <h3 class="section-name">Camila Garcia</h3>
-              <p class="section-text">Marketing</p>
+              <div class="team-container">
+                <h3 class="section-name">Camila Garcia</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
-            <li class="list-team">
+            <li class="item">
               <img src="./images/employees4.jpg" alt="employees" width="264" />
-              <h3 class="section-name">Daniel Wilson</h3>
-              <p class="section-text">UI Designer</p>
+              <div class="team-container">
+                <h3 class="section-name">Daniel Wilson</h3>
+                <p class="section-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
