ДЗ 3 випраляю помилку portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
     </header>
     <main>
       <!-- Our works -->
-      <section class="section portfolio">
+      <section class="section portfol">
         <div class="container">
           <h1 hidden class="work section-title">Our works</h1>
           <ul class="list btn">
