ДЗ 3 виправляю помилкu 2

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
     <!-- Main Content -->
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button">Order Service</button>
+        </div>
       </section>
 
       <!-- Our qualities -->
@@ -131,28 +133,28 @@
         <div class="container">
           <h2 class="section-title transform">Our Team</h2>
           <ul class="list team">
-            <li class="item">
+            <li class="item border">
               <img src="./images/employees1.jpg" alt="employees" width="264" />
               <div class="team-container">
                 <h3 class="section-name">Mark Guerrero</h3>
                 <p class="section-text">Product Designer</p>
               </div>
             </li>
-            <li class="item">
+            <li class="item border">
               <img src="./images/employees2.jpg" alt="employees" width="264" />
               <div class="team-container">
                 <h3 class="section-name">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
               </div>
             </li>
-            <li class="item">
+            <li class="item border">
               <img src="./images/employees3.jpg" alt="employees" width="264" />
               <div class="team-container">
                 <h3 class="section-name">Camila Garcia</h3>
                 <p class="section-text">Marketing</p>
               </div>
             </li>
-            <li class="item">
+            <li class="item border">
               <img src="./images/employees4.jpg" alt="employees" width="264" />
               <div class="team-container">
                 <h3 class="section-name">Daniel Wilson</h3>
