ДЗ 3 виправляю помилкu на які вказав ментор

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- Our qualities -->
       <section class="section qua">
         <div class="container">
-          <h2 hidden class="section-title">Our qualities</h2>
+          <h2 class="visually-hidden">Our qualities</h2>
           <ul class="list qua">
             <li class="item">
               <h3 class="section-qualities">Strategy</h3>
