--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
     <footer class="footer">
       <div class="container">
         <a class="logo link" href="./index.html"
-          >Web
-          <span class="logo-cloud">Studio</span>
+          >Web<span class="logo-cloud">Studio</span>
         </a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
