--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
       <!-- Our works -->
       <section class="section portfol">
         <div class="container">
-          <h1 hidden class="visually-hidden">Our works</h1>
+          <h1 class="visually-hidden">Our works</h1>
           <ul class="list btn">
             <li><button type="button" class="link work-button">All</button></li>
             <li>
